# augurian-ai-operations

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: adoption-coach.md  agent-architect.md  ai-literacy-coach.md  analytics.md  audit-reviewer.md  change-comms.md  client-onboarder.md  code-reviewer.md  commitment-tracker.md  context-coach.md  cost-monitor.md  diagram-designer.md  drive-data-architect.md  drive-warehouse-curator.md  fireflies-extractor.md  ga4-data-expert.md  git-workflow.md  gsc-anomaly-detector.md  kpi-tracker.md  leadership-briefing.md  mcp-integrator.md  monthly-report-drafter.md  organic-search.md  paid-media.md  (+7 more)
claude_ai_skills/: 01_extract_one_meeting.md  02_query_meetings.md  03_draft_status_report.md  04_audit_transcript.md  README.md
context_templates/: client_context_template.md  spelling_corrections_template.txt
docs/: ADOPTION_PLAN.md  CLIENT_DISCLOSURE_WORKSHEET.md  DEMO_WALKTHROUGH.md  EXTERNAL_RESOURCES.md  FOR_NON_TECHNICAL_READERS.md  GLOSSARY.md  HOW_IT_WORKS.md  IMPLEMENTATION_PLAYBOOK.md  KPI_PLAYBOOK.md  LEADERSHIP_BRIEF.md  README.md  TOOLING_CLOUD_RUN.md  TOOLING_MCP.md  TOOLING_PIPELINES.md  TRAINING_GUIDE.md  VENDOR_MANAGEMENT.md  access_patterns.md  deployment_options.md
examples/: README.md
orchestrator/: __init__.py  config.py  main.py
pipelines/: __init__.py  ads_puller.py  clients.example.yaml  drive_watcher.py  ga4_puller.py  gsc_puller.py  optmyzr_puller.py
scripts/: api.py  ask.py  fireflies_walkthrough.py  readiness_check.py  run_validation.py  web_chat.py
tests/: conftest.py  test_corrections.py  test_corruption_detection.py  test_demo_data_schema.py  test_extractor_prompt.py  test_filename_parsing.py  test_index_reader.py  test_list_meetings.py  test_meeting_details.py  test_query_commitments.py  test_read_meeting_text.py  test_slug_derivation.py
web/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+54 files in other folders)
